LUCENE-9694: fixes after backporting to compile/run under JDK 8 for Lucene 8.x